--- a/ExploreCalifornia/ExploreCalifornia/config.develop.json
+++ b/ExploreCalifornia/ExploreCalifornia/config.develop.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "BlogDataContext": "Server=(localdb)\\mssqllocaldb;Database=ExploreCalifornia;Trusted_Connection=True;",
+    "SpecialDataContext": "Server=(localdb)\\mssqllocaldb;Database=ExploreCalifornia_Specials;Trusted_Connection=True;"
+  },
   "FeatureToggles": {
     "EnableDeveloperExceptions": true
   }
